--- a/Backend/channelserver/package.json
+++ b/Backend/channelserver/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "scripts",
+  "name": "channelserver",
   "version": "1.0.0",
   "description": "",
-  "main": "chat.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server":"nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22",
-    "passport-google-oauth20": "^2.0.0",
-    "redis": "^4.6.6"
+    "nodemon": "^2.0.22"
   }
 }
