--- a/Backend/chatserver/.env
+++ b/Backend/chatserver/.env
@@ -1,2 +1,2 @@
-port=4500
-URL=mongodb+srv://ritesh:ritesh@cluster0.fbwxypy.mongodb.net/chatify?retryWrites=true&w=majority
+port=8090
+URL=mongodb+srv://mrunali:mrunalibind@cluster0.tsxywrf.mongodb.net/Chatify?retryWrites=true&w=majority
