--- a/Backend/userserver/package.json
+++ b/Backend/userserver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "userserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,10 +32,12 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
     "delegates": "^1.0.0",
+    "denque": "^2.1.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "detect-libc": "^2.0.1",
@@ -69,6 +71,7 @@
     "ignore-by-default": "^1.0.1",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
+    "ioredis": "^5.3.2",
     "ip": "^2.0.0",
     "ipaddr.js": "^1.9.1",
     "is-binary-path": "^2.1.0",
@@ -81,6 +84,8 @@
     "jws": "^3.2.2",
     "kareem": "^2.5.1",
     "lodash": "^4.17.21",
+    "lodash.defaults": "^4.2.0",
+    "lodash.isarguments": "^3.1.0",
     "lru-cache": "^6.0.0",
     "make-dir": "^3.1.0",
     "media-typer": "^0.3.0",
@@ -128,6 +133,8 @@
     "readable-stream": "^3.6.2",
     "readdirp": "^3.6.0",
     "redis": "^4.6.6",
+    "redis-errors": "^1.2.0",
+    "redis-parser": "^3.0.0",
     "rimraf": "^3.0.2",
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
@@ -144,6 +151,7 @@
     "smart-buffer": "^4.2.0",
     "socks": "^2.7.1",
     "sparse-bitfield": "^3.0.3",
+    "standard-as-callback": "^2.1.0",
     "statuses": "^2.0.1",
     "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
@@ -169,7 +177,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon index.js"
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
