userserver data updation done

--- a/Backend/chatserver/.env
+++ b/Backend/chatserver/.env
@@ -1,2 +1,2 @@
 port=8090
-URL=mongodb+srv://mrunali:mrunalibind@cluster0.tsxywrf.mongodb.net/Chatify?retryWrites=true&w=majority
+URL="mongodb+srv://kothawaderitesh2010:kothawaderitesh2010@cluster0.ellzlbu.mongodb.net/Chatify?retryWrites=true&w=majority"
